Multi class test model

--- a/scoring_output/scores.html
+++ b/scoring_output/scores.html
@@ -1,20 +1,22 @@
-======= Set 1 (Cadata_train_000): score(R2)=0.781960583617 =======
-BAC (multiclass) --> 0.708063609626
-BAC (multilabel) --> 0.708063609626
-AUC (multilabel) --> 0.892547046666
-PAC (multilabel) --> 0.220692693296
-F1  (multiclass) --> 0.592677345538
-PAC (multiclass) --> 0.220692693296
-Regression ABS   --> 0.575956146529
-F1  (multilabel) --> 0.592677345538
-Regression R2    --> 0.781960583617
-======= Set 2 (Cadata_valid_000): score(R2)=0.737804315118 =======
-BAC (multiclass) --> 0.658950364059
-BAC (multilabel) --> 0.658950364059
-AUC (multilabel) --> 0.868915513344
-PAC (multilabel) --> 0.202184668298
-F1  (multiclass) --> 0.522388059701
-PAC (multiclass) --> 0.202184668298
-Regression ABS   --> 0.543170071151
-F1  (multilabel) --> 0.522388059701
-Regression R2    --> 0.737804315118
+======= Set 1 (Cadata_train): score(R2)=ERROR =======
+======= Set 2 (Cadata_valid): score(R2)=ERROR =======
+======= Set 3 (Newsgroups_train_000): score(multiclassPAC)=0.314987721604 =======
+BAC (multiclass) --> 0.749947876866
+BAC (multilabel) --> 0.665521741455
+AUC (multilabel) --> 0.888426844833
+PAC (multilabel) --> 0.586203961918
+F1  (multiclass) --> 0.763302836191
+PAC (multiclass) --> 0.314987721604
+Regression ABS   --> 0.62431249907
+F1  (multilabel) --> 0.419942855373
+Regression R2    --> 0.607176105602
+======= Set 4 (Newsgroups_valid_000): score(multiclassPAC)=0.222179307600 =======
+BAC (multiclass) --> 0.676129650099
+BAC (multilabel) --> 0.60307660332
+AUC (multilabel) --> 0.840501967613
+PAC (multilabel) --> 0.478701388073
+F1  (multiclass) --> 0.680485365915
+PAC (multiclass) --> 0.2221793076
+Regression ABS   --> 0.56491193725
+F1  (multilabel) --> 0.274977482859
+Regression R2    --> 0.487329190379
