--- a/scoring_output/scores.html
+++ b/scoring_output/scores.html
@@ -1,22 +1,33 @@
-======= Set 1 (Cadata_train): score(R2)=ERROR =======
-======= Set 2 (Cadata_valid): score(R2)=ERROR =======
-======= Set 3 (Newsgroups_train_000): score(multiclassPAC)=0.314987721604 =======
-BAC (multiclass) --> 0.749947876866
-BAC (multilabel) --> 0.665521741455
-AUC (multilabel) --> 0.888426844833
-PAC (multilabel) --> 0.586203961918
-F1  (multiclass) --> 0.763302836191
-PAC (multiclass) --> 0.314987721604
-Regression ABS   --> 0.62431249907
-F1  (multilabel) --> 0.419942855373
-Regression R2    --> 0.607176105602
-======= Set 4 (Newsgroups_valid_000): score(multiclassPAC)=0.222179307600 =======
-BAC (multiclass) --> 0.676129650099
-BAC (multilabel) --> 0.60307660332
-AUC (multilabel) --> 0.840501967613
-PAC (multilabel) --> 0.478701388073
-F1  (multiclass) --> 0.680485365915
-PAC (multiclass) --> 0.2221793076
-Regression ABS   --> 0.56491193725
-F1  (multilabel) --> 0.274977482859
-Regression R2    --> 0.487329190379
+======= Set 1 (Adult_train): score(multilabelF1)=ERROR =======
+======= Set 2 (Adult_valid): score(multilabelF1)=ERROR =======
+======= Set 3 (Cadata_train): score(R2)=ERROR =======
+======= Set 4 (Cadata_valid): score(R2)=ERROR =======
+======= Set 5 (Christine_train): score(binaryBAC)=ERROR =======
+======= Set 6 (Digits_train): score(multiclassBAC)=ERROR =======
+======= Set 7 (Digits_valid): score(multiclassBAC)=ERROR =======
+======= Set 8 (Dorothea_train): score(binaryAUC)=ERROR =======
+======= Set 9 (Dorothea_valid): score(binaryAUC)=ERROR =======
+======= Set 10 (Jasmine_train): score(binaryBAC)=ERROR =======
+======= Set 11 (Madeline_train): score(binaryBAC)=ERROR =======
+======= Set 12 (Newsgroups_train_000): score(multiclassPAC)=0.309816386405 =======
+BAC (multiclass) --> 0.698199773403
+BAC (multilabel) --> 0.614263718224
+AUC (multilabel) --> 0.920573335498
+PAC (multilabel) --> 0.587581221931
+F1  (multiclass) --> 0.734087215252
+PAC (multiclass) --> 0.309816386405
+Regression ABS   --> 0.540378362077
+F1  (multilabel) --> 0.421125413068
+Regression R2    --> 0.604340490298
+======= Set 13 (Newsgroups_valid_000): score(multiclassPAC)=0.226442259122 =======
+BAC (multiclass) --> 0.614289723762
+BAC (multilabel) --> 0.512349398948
+AUC (multilabel) --> 0.87262470863
+PAC (multilabel) --> 0.497048004262
+F1  (multiclass) --> 0.646633541528
+PAC (multiclass) --> 0.226442259122
+Regression ABS   --> 0.456766410634
+F1  (multilabel) --> 0.250150020872
+Regression R2    --> 0.50087256879
+======= Set 14 (Philippine_train): score(binaryBAC)=ERROR =======
+======= Set 15 (Sylvine_train): score(binaryBAC)=ERROR =======
